# detox

./: .editorconfig  .gitignore  .travis.yml  BUILD.md  CHANGELOG.md  CHANGES  HACKING-v1.md  LICENSE  Makefile.am  Makefile.in  README  README.md  THANKS.md  TODO.md  aclocal.m4  clean_string.c  clean_string.h  config.h.in  config_file.h  config_file.l  config_file.y  config_file_dump.c  config_file_dump.h  config_file_l.c  config_file_spoof.c  config_file_spoof.h  config_file_y.c  config_file_y.h  configure  configure.ac  configure.in  detox.1  detox.c  detox.h  detox.tbl.5  detoxrc  detoxrc.5  file-inline.c  file-inline.h  file.c  (+17 more)
.circleci/: config.yml
.github/workflows/: c-cpp.yml  regress-1.x.yml  regress.yml
etc/: detoxrc  detoxrc.sample
man/: Makefile.am  Makefile.in  detox.1  detox.tbl.5  detoxrc.5  inline-detox.1
snap/: snapcraft.yaml
src/: .gitignore  Makefile.am  Makefile.in  builtin_table.c  builtin_table.c.in  builtin_table.h  check_table.c  clean_string.c  clean_string.h  clean_utf_8.c  clean_utf_8.h  config.h.in  config_file.c  config_file.h  config_file_dump.c  config_file_dump.h  config_file_lex.c  config_file_lex.l  config_file_spoof.c  config_file_spoof.h  config_file_yacc.c  config_file_yacc.h  config_file_yacc.y  detox.c  detox.h  detox_struct.c  detox_struct.h  escape_utf_8.c  file-inline.h  file.c  file.h  filelist.c  filelist.h  filter.c  filter.h  generate_builtin_table.c  iso8859_1.h  parse_options.c  parse_options.h  parse_options_generic.c  (+17 more)
table/: c_escape.tbl  cp1252.tbl  fat.tbl  iso8859_1.tbl  iso8859_1.tbl.sample  miSanitize.tbl  safe.tbl.sample  unicode.tbl  unicode.tbl.sample  unidecode.tbl  unidecode.tbl.sample
table/legacy/: cp1252.tbl  unicode.tbl
tests/: Makefile.am  build.sh  character-helper.sh  test-functions  test-functions.sh  test.sh  travis.sh
tests/0014-0001/: test.sh
tests/0014-0002/: test.sh  test.tbl
tests/legacy/: Makefile.am  character-helper.sh  test-functions.sh  test.sh
tests/legacy/github-issue-0009/: test.sh
tests/legacy/github-issue-0011/: test.sh
tests/legacy/github-issue-0012/: test.sh
tests/legacy/github-issue-0014/: test.sh
tests/legacy/github-issue-0017/: test.sh
tests/legacy/github-issue-0019/: test.sh
tests/legacy/github-issue-0020/: test.sh
tests/legacy/github-issue-0021/: test.sh
tests/legacy/github-issue-0023/: test.sh
tests/legacy/github-issue-0028/: test.sh
tests/legacy/github-issue-0033/: test.sh
tests/legacy/github-issue-0037/: detoxrc.invalid.1  detoxrc.invalid.3  test.sh
tests/legacy/github-issue-0040/: test.sh
tests/legacy/github-issue-0041/: test.sh
tests/legacy/github-issue-0043/: test.sh
tests/legacy/github-issue-0046/: test.sh
tests/legacy/github-issue-0046-fail/: detoxrc.max_length
tests/legacy/github-issue-0050-invalid/: test.sh
tests/legacy/github-issue-0056/: test.sh
tests/legacy/github-issue-0062/: test.sh
tests/legacy/github-issue-0064/: test.sh
tests/legacy/legacy-dir/: test.sh
tests/legacy/legacy-iso8859_1/: test.sh
tests/legacy/legacy-iso8859_1-basic/: test.sh
tests/legacy/legacy-lower/: test.sh
tests/legacy/legacy-max_32/: test.sh
tests/legacy/legacy-remove_trailing/: test.sh
tests/legacy/legacy-safe/: test.sh
tests/legacy/legacy-safe-basic/: test.sh
tests/legacy/legacy-uncgi/: test.sh
tests/legacy/legacy-utf_8/: test.sh
tests/legacy/legacy-utf_8-basic/: test.sh
tests/legacy/man-page-example/: detoxrc.detox.tbl.5  detoxrc.detoxrc.5  expected.detox.tbl.5.txt  expected.detoxrc.5.txt  test.sh
tests/legacy/man-page-max-length/: test.sh
tests/legacy/man-page-sequence-with-language/: test.sh
tests/legacy/table-regression/: test.sh
tests/tests/github-issue-0009/: test.sh
tests/tests/github-issue-0011/: test.sh
tests/tests/github-issue-0012/: test.sh
tests/tests/github-issue-0014/: test.sh  test.tbl
tests/tests/github-issue-0017/: test.sh
tests/tests/github-issue-0019/: test.sh  test.tbl
tests/tests/github-issue-0020/: test.sh
tests/tests/github-issue-0021/: test.sh
tests/tests/github-issue-0023/: test.sh
tests/tests/github-issue-0028/: test.sh
tests/tests/github-issue-0029/: safe.tbl  test.sh
tests/tests/github-issue-0033/: test.sh
tests/tests/github-issue-0037/: detoxrc.invalid.2  test.sh
tests/tests/github-issue-0040/: test.sh
tests/tests/github-issue-0041/: test.sh
tests/tests/github-issue-0043/: test.sh
tests/tests/github-issue-0046/: test.sh
tests/tests/github-issue-0046-fail/: test.sh
tests/tests/github-issue-0050-invalid/: detoxrc.invalid_builtin  test.sh
tests/tests/github-issue-0056/: test.sh
tests/tests/github-issue-0062/: test.sh
tests/tests/github-issue-0064/: detoxrc.base  detoxrc.remove_trailing  test.sh
tests/tests/legacy-dir/: test.sh
tests/tests/legacy-iso8859_1/: test.sh
tests/tests/legacy-iso8859_1-basic/: test.sh
tests/tests/legacy-lower/: test.sh
tests/tests/legacy-max_32/: test.sh
tests/tests/legacy-remove_trailing/: test.sh
tests/tests/legacy-safe/: test.sh
tests/tests/legacy-safe-basic/: test.sh
tests/tests/legacy-uncgi/: test.sh
tests/unit/: .gitignore  Makefile.am  check_clean_string.c  test_clean_iso8859_1.c  test_clean_iso8859_1.template  test_clean_iso8859_1.ts  test_clean_iso8859_1_cp1252.c  test_clean_iso8859_1_cp1252.template  test_clean_lower.c  test_clean_lower.template  test_clean_lower.ts  test_clean_max_length.c  test_clean_max_length.ts  test_clean_safe.c  test_clean_safe.ts  test_clean_uncgi.c  test_clean_uncgi.ts  test_clean_utf_8.c  test_clean_utf_8.template  test_clean_utf_8.ts  test_clean_wipeup.c  test_clean_wipeup.ts  test_filelist.c  test_filelist.ts  test_parse_inline.c  test_parse_inline.template  test_parse_inline.ts  test_spoof_config_file.c  test_spoof_config_file.template  test_spoof_config_file.ts  test_table_max_length.c  test_table_max_length.ts  test_table_regression.c  test_table_resize.c  test_table_resize.template  test_table_resize.ts  test_wrapped.c  test_wrapped.template  test_wrapped.ts  unit_struct.h
tests/unit/fixtures/: test_table_regression.tbl  test_table_resize.tbl
(+14 files in other folders)
